# niclms

./: .gitignore
backend/: .gitignore  Cargo.toml
backend/api/: Cargo.toml
backend/api/src/: accounts_api.rs  file_api.rs  lib.rs  main.rs  users_api.rs
backend/api/tests/: auth_test.rs  test_helper.rs
backend/api_core/: Cargo.toml
backend/api_core/src/: app_context.rs  errors.rs  filters.rs  lib.rs  params.rs  request.rs  resolvers.rs
backend/apps/: Cargo.toml
backend/apps/src/: app.rs  app_repository.rs  app_service.rs  lib.rs
backend/auth/: Cargo.toml
backend/auth/src/: account.rs  account_repository.rs  account_service.rs  jwt_auth.rs  lib.rs
backend/common/: Cargo.toml
backend/common/src/: crypto_helper.rs  entities.rs  lib.rs
backend/framework/: Cargo.toml
backend/framework/src/: entity.rs  error_msgs.rs  lib.rs  repository.rs  resolvers.rs  service.rs
backend/infra/: Cargo.toml
backend/infra/src/: lib.rs  qrcode.rs  s3.rs  sms.rs
backend/infra/tests/: qrcode_test.rs
backend/institute/: Cargo.toml
backend/macros/: Cargo.toml
backend/macros/src/: lib.rs
backend/sms-api/: Cargo.toml
backend/sms-api/src/: main.rs  sms_payload.rs
backend/users/: Cargo.toml
backend/users/src/: lib.rs  new_user.rs  user.rs  user_repository.rs  user_service.rs  user_update.rs
sync-server/: config.json  index.ts  log.txt  package-lock.json  package.json
