[package]
name = "api"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
framework={path="../framework"}
api_core={path="../api_core"}
users={path="../users"}
auth={path="../auth"}
infra={path="../infra"}
common={path="../common"}

rocket ={version= "0.5.0-rc.1",features=["json"]}
rocket_contrib="0.4.10"
couch_rs = "0.8"
serde={version="1.0.130",features=["derive"]}
serde_json="1.0.68"
rocket_cors = { git = "https://github.com/lawliet89/rocket_cors", branch = "master" }
async-trait="0.1.51"
uuid={version="0.8.2",features=["v4"]}
url="2.2.2"
dotenv="0.15.0"

[dependencies.thiserror]
version = "~1"

[dependencies.serde_derive]
version = "~1"
