[package]
name = "apps"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
couch_rs = "0.8"
async-trait="0.1.51"
url="2.2.2"
serde={version="1.0.130",features=["derive"]}
serde_json="1.0.68"
uuid={version="0.8.2",features=["v4"]}
tokio="*"
framework={path="../framework"}
common={path="../common"}
macros={path="../macros"}
