[package]
name = "framework"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket ={version= "0.5.0-rc.1",features=["json"]}
couch_rs = "0.8"
serde={version="1.0.130",features=["derive"]}
serde_json="1.0.68"
async-trait="0.1.51"
uuid={version="0.8.2",features=["v4"]}