[package]
name = "infra"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusoto_core = "0.47.0"
rusoto_sqs = "0.47.0"
rusoto_s3 = "0.47.0"
rusoto_credential="0.47.0"
serde={version="1.0.130",features=["derive"]}
serde_json = "1.0.69"
reqwest = { version = "0.11", features = ["json"] }
image ="0.23.14"
bardecoder = "0.3.0"
rqrr ="0.4.0"
